# webrtc-streaming

./: .gitignore  CMakeLists.txt  Procfile  README.md  app.py  connect4.py  index.html  main.js  package.xml  robot_router.py
.github/workflows/: codeql-analysis.yml
__pycache__/: app.py
bash_scripts/: local_router_test.sh  local_simple_test.sh  local_test.sh  local_test_simple.sh  web_no_vpn_test.sh  web_node_test.sh  web_test.sh
config/: config.yaml
example/: client.py  server.py
launch/: flexa_webrtc.launch  webrtc_robot_front_camera.launch  webrtc_robot_test.launch  webrtc_robot_test2.launch  webrtc_test.launch  webrtc_test_local.launch  webrtc_test_node.launch  webrtc_test_web.launch
node/: .env  index.js  package-lock.json  package.json
node/public/css/: style.css
node/public/js/: main.js
node/views/pages/: index.ejs
scripts/: robot_router.py  ws_broadcaster.py
testing/: B.py
