<?xml version="1.0"?>
<package format="2">
  <name>webrtc_router</name>
  <version>0.0.0</version>
  <description>The webrtc_router package</description>
  <maintainer email="johntan@tglobotix.sg">john tan</maintainer>x
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
  
</package>
